modify contact add credit

--- a/about.html
+++ b/about.html
@@ -223,7 +223,9 @@
         counter"></a></div></noscript>
         <!-- End of Statcounter Code -->
         <div class="footer-text">
-        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
+        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.
+            <p class="credit">Site facut de <a href="https://razvanel.pw" target="_blank">Razvan</a></p>
+        </div>        
         <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
