--- a/gallery.html
+++ b/gallery.html
@@ -152,9 +152,11 @@
         src="//c.statcounter.com/11781583/0/5266f471/0/" alt="hit
         counter"></a></div></noscript>
         <!-- End of Statcounter Code -->
-        <div class="footer-text">
-        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
-        <span class="divider divider-gold divider-margin"></span>
+      <div class="footer-text">
+        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.
+            <p class="credit">Site facut de <a href="https://razvanel.pw" target="_blank">Razvan</a></p>
+        </div>
+      <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
         <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
