fiexed mixed content

--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                 </div>
               </div>
               <div class="right">
-                <div class="interactivity-image"><span id="height"></span><span class="opening opening-first"></span><img src="http://www.halemetalicesv.ro/images/calculator-11.png" id="img-reprezentare1"/></div>
+                <div class="interactivity-image"><span id="height"></span><span class="opening opening-first"></span><img src="assets/img/hala2d1.png" id="img-reprezentare1"/></div>
                 <div class="interactivity-image"><span class="opening opening-second"></span><span id="width"></span><img src="assets/img/hala3d.png" id="img-reprezentare2"/></div>
               </div>
             </div>
