--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
   <meta name="msapplication-TileColor" content="#FFB200">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#FFB200">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5440879351287045",
+      enable_page_level_ads: true
+    });
+  </script>
   <!-- WOW JS -->
   <script src="js/wow.min.js"></script>
   <script>
