--- a/gallery.html
+++ b/gallery.html
@@ -5,19 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs.">
+  <title>Hale Metalice | Galerie</title>
+  <meta name="description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Confectionam hale metalice din europrofile sau teava patrata. O hala este construita din materiale de calitate, omologate si testate. Hala metalica demontabila, va ofera atat eficienta in exploatare, costuri minime de mentenanta, cat si o imagine noua. O altfel de imagine fata de concurenta. Fiecare angajat al firmei noastre este pregatit sa raspunda cerintelor oricarui proiect. Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi.">
   <!-- Apple meta's -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
   <meta property="fb:app_id" content="386859795173696" /> 
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="Milenium Metcons | Galerie" />
-  <meta property="og:description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs." />
+  <meta property="og:description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Confectionam hale metalice din europrofile sau teava patrata. O hala este construita din materiale de calitate, omologate si testate. Hala metalica demontabila, va ofera atat eficienta in exploatare, costuri minime de mentenanta, cat si o imagine noua. O altfel de imagine fata de concurenta. Fiecare angajat al firmei noastre este pregatit sa raspunda cerintelor oricarui proiect. Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi." />
   <meta property="og:type" content="business.business" />
+  <meta property="business:contact_data:website" content="https://www.mileniummetcons.com/" />
+  <meta property="business:contact_data:country_name" content="Romania" />
+  <meta property="business:contact_data:email" content="mileniummetcons@yahoo.com" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
-  <meta property="og:image" content="assets/img/facebook.png" />
+  <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook.png" />
+  <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook2.png" />
   <!-- Link -->
   <link rel="canonical" href="https://www.mileniummetcons.com/">
+  <link rel="stylesheet" href="css/gallery.min.css" type="text/css">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
@@ -36,13 +43,11 @@
   <meta name="msapplication-TileColor" content="#FFB200">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#FFB200">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-  <link rel="stylesheet" href="css/gallery.min.css" type="text/css">
+  <!-- WOW JS -->
   <script src="js/wow.min.js"></script>
   <script>
-    new WOW().init();
+  new WOW().init();
   </script>
-  <title>Hale Metalice | Galerie</title>
 </head>
 <body>
   <header class="navheader">
@@ -95,17 +100,17 @@
     <div class="row">
       <div class="column">
         <img src="assets/img/gallery/img16.jpg" alt="" class="wow fadeIn" data-wow-delay="0.1s">
-        <img src="assets/img/gallery/img23.jpg" alt="" class="wow fadeIn" data-wow-delay="0.18s">
-        <img src="assets/img/gallery/img26.jpg" alt="" class="wow fadeIn" data-wow-delay="0.28s">
+        <img src="assets/img/gallery/img23.jpg" alt="" class="wow fadeIn" data-wow-delay="0.14s">
+        <img src="assets/img/gallery/img26.jpg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
       </div>
       <div class="column">
-        <img src="assets/img/gallery/img21.jpg" alt="" class="wow fadeIn" data-wow-delay="0.38s">
-        <img src="assets/img/gallery/img17.jpg" alt="" class="wow fadeIn" data-wow-delay="0.48s">
-        <img src="assets/img/gallery/img23.jpg" alt="" class="wow fadeIn" data-wow-delay="0.58s">
+        <img src="assets/img/gallery/img21.jpg" alt="" class="wow fadeIn" data-wow-delay="0.34s">
+        <img src="assets/img/gallery/img17.jpg" alt="" class="wow fadeIn" data-wow-delay="0.44s">
+        <img src="assets/img/gallery/img23.jpg" alt="" class="wow fadeIn" data-wow-delay="0.54s">
       </div>
       <div class="column">
-        <img src="assets/img/gallery/img15.jpg" alt="" class="wow fadeIn" data-wow-delay="0.68s">
-        <img src="assets/img/gallery/img27.jpg" alt="" class="wow fadeIn" data-wow-delay="0.78s">
+        <img src="assets/img/gallery/img15.jpg" alt="" class="wow fadeIn" data-wow-delay="0.64s">
+        <img src="assets/img/gallery/img27.jpg" alt="" class="wow fadeIn" data-wow-delay="0.74s">
       </div>
     </div>
   </div>
@@ -147,9 +152,11 @@
         src="//c.statcounter.com/11781583/0/5266f471/0/" alt="hit
         counter"></a></div></noscript>
         <!-- End of Statcounter Code -->
-        <div class="footer-text">
-        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
-        <span class="divider divider-gold divider-margin"></span>
+      <div class="footer-text">
+        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.
+            <p class="credit">Site facut de <a href="https://razvanel.pw" target="_blank">Razvan</a></p>
+        </div>
+      <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
         <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
@@ -158,6 +165,5 @@
     </div>
   </footer>
   <script src="js/menu-burger.js"></script>
-  <script src="js/gallery.js"></script>
 </body>
 </html>
