change meta title and descp, script to bottom

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Hale Metalice | Acasa</title>
-  <meta name="description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Confectionam hale metalice din europrofile sau teava patrata. O hala este construita din materiale de calitate, omologate si testate. Hala metalica demontabila, va ofera atat eficienta in exploatare, costuri minime de mentenanta, cat si o imagine noua. O altfel de imagine fata de concurenta. Fiecare angajat al firmei noastre este pregatit sa raspunda cerintelor oricarui proiect. Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi.">
+  <title>Milenium Metcons - Confection hale metalice | Tuburui | Teava</title>
+  <meta name="description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi.">
   <!-- Apple meta's -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
   <meta property="fb:app_id" content="386859795173696" /> 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Milenium Metcons | Acasa" />
-  <meta property="og:description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Confectionam hale metalice din europrofile sau teava patrata. O hala este construita din materiale de calitate, omologate si testate. Hala metalica demontabila, va ofera atat eficienta in exploatare, costuri minime de mentenanta, cat si o imagine noua. O altfel de imagine fata de concurenta. Fiecare angajat al firmei noastre este pregatit sa raspunda cerintelor oricarui proiect. Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi." />
+  <meta property="og:title" content="Milenium Metcons - Confection hale metalice | Tuburui | Teava" />
+  <meta property="og:description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi." />
   <meta property="og:type" content="business.business" />
   <meta property="business:contact_data:website" content="https://www.mileniummetcons.com/" />
   <meta property="business:contact_data:country_name" content="Romania" />
@@ -45,12 +45,6 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#FFB200">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-5440879351287045",
-      enable_page_level_ads: true
-    });
-  </script>
   <!-- WOW JS -->
   <script src="js/wow.min.js"></script>
   <script>
@@ -95,11 +89,11 @@
     </header>
     <div class="menu">
       <div class="menu__element active-link"><a href="/">Acasa</a></div>
-      <div class="menu__element"><a href="/contact.html" >Contact</a></div>
+      <div class="menu__element"><a href="/contact.html">Contact</a></div>
       <div class="menu__element"><a href="/about.html" >Despre</a></div>
-      <div class="menu__element"><a href="/gallery.html" >Galerie</a></div>
+      <div class="menu__element"><a href="/gallery.html">Galerie</a></div>
       <div class="menu__element"><a href="/teava.html" >Teava</a></div>
-      <div class="menu__element"><a href="/tuburi.html" >Tuburi</a></div>
+      <div class="menu__element"><a href="/tuburi.html">Tuburi</a></div>
     </div>
     <div class="main__box">
       <div class="main__content">
@@ -231,6 +225,12 @@
       </div>
     </div>
   </footer>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5440879351287045",
+      enable_page_level_ads: true
+    });
+  </script>
   <script src="js/menu-burger.js"></script>
 </body>
 </html>
