phone numbers and google analytics

--- a/gallery.html
+++ b/gallery.html
@@ -133,34 +133,20 @@
     </form>
     </div>
     <div class="left">
-      <img class="footer__logo" src="assets/img/logo.png">
-      <!-- Default Statcounter code for Milenium
-      https://www.mileniummetcons.com -->
-      <script type="text/javascript">
-        var sc_project=11781583; 
-        var sc_invisible=0; 
-        var sc_security="5266f471"; 
-        var scJsHost = (("https:" == document.location.protocol) ?
-        "https://secure." : "http://www.");
-        document.write("<sc"+"ript type='text/javascript' src='" +
-        scJsHost+
-        "statcounter.com/counter/counter.js'></"+"script>");
-        </script>
-        <noscript><div class="statcounter"><a title="hit counter"
-        href="http://statcounter.com/" target="_blank"><img
-        class="statcounter"
-        src="//c.statcounter.com/11781583/0/5266f471/0/" alt="hit
-        counter"></a></div></noscript>
-        <!-- End of Statcounter Code -->
-      <div class="footer-text">
-        <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.
-            <p class="credit">Site facut de <a href="https://razvanel.pw" target="_blank">Razvan</a></p>
-        </div>
-      <span class="divider divider-gold divider-margin"></span>
+      <img class="footer__logo" src="assets/img/logo.png" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
+      <div class="footer-numbers">
+        <a href="tel:4075-638-7831"><button class="btn btn-white phone-number">+4075-638-7831</button></a>
+        <a href="tel:4075-280-5775"><button class="btn btn-white phone-number">+4075-280-5775</button></a>
+      </div>   
+        <div class="footer-text">
+          <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.
+              <p class="credit">Site facut de <a href="mailto:razvanro666@gmail.com" target="_blank">Razvan</a></p>
+          </div>        
+          <span class="divider divider-gold divider-margin"></span>
       </div>
       <div class="footer__socials">
-        <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt=""></a>
-        <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt=""></a>
+        <a href="https://www.facebook.com/hale.metal1/" target="_blank"><img src="assets/img/socialicons/fb.png" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons."></a>
+        <a href="https://api.whatsapp.com/send?phone=40752805775&text=Va%20contactez%20in%20legatura%20cu%20Milenium%20Metcons!" target="_blank"><img src="assets/img/socialicons/whatsapp.png" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons."></a>
       </div>
     </div>
   </footer>
