--- a/gallery.html
+++ b/gallery.html
@@ -58,13 +58,13 @@
         <div class="right">
           <ul class="navbar-links">
               <li>
-                <a href="/" class="nav-link">Acasa</a>
+                <a href="/" class="nav-link">Hale Metalice</a>
               </li>
               <li>
                 <a href="/contact.html" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="/about.html" class="nav-link">Despre</a>
+                <a href="/about.html" class="nav-link">Acasa</a>
               </li>
               <li>
                 <a href="/gallery.html" class="nav-link active-link">Galerie</a>
@@ -99,17 +99,28 @@
     </div>
     <div class="row">
       <div class="column">
+        <img src="assets/img/gallery/img38.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
+        <img src="assets/img/gallery/img37.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
+        <img src="assets/img/gallery/img34.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
+        <img src="assets/img/gallery/img30.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
         <img src="assets/img/gallery/img16.jpg" alt="" class="wow fadeIn" data-wow-delay="0.1s">
         <img src="assets/img/gallery/img23.jpg" alt="" class="wow fadeIn" data-wow-delay="0.14s">
         <img src="assets/img/gallery/img26.jpg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
       </div>
       <div class="column">
+        <img src="assets/img/gallery/img39.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.54s">
+        <img src="assets/img/gallery/img36.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.54s">
+        <img src="assets/img/gallery/img35.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.54s">
+        <img src="assets/img/gallery/img31.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.54s">
         <img src="assets/img/gallery/img21.jpg" alt="" class="wow fadeIn" data-wow-delay="0.34s">
+        <img src="assets/img/gallery/img32.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.74s">
         <img src="assets/img/gallery/img17.jpg" alt="" class="wow fadeIn" data-wow-delay="0.44s">
         <img src="assets/img/gallery/img23.jpg" alt="" class="wow fadeIn" data-wow-delay="0.54s">
       </div>
       <div class="column">
+        <img src="assets/img/gallery/img33.jpeg" alt="" class="wow fadeIn" data-wow-delay="0.24s">
         <img src="assets/img/gallery/img15.jpg" alt="" class="wow fadeIn" data-wow-delay="0.64s">
+        <img src="assets/img/gallery/img27.jpg" alt="" class="wow fadeIn" data-wow-delay="0.74s">
         <img src="assets/img/gallery/img27.jpg" alt="" class="wow fadeIn" data-wow-delay="0.74s">
       </div>
     </div>
