--- a/teava.html
+++ b/teava.html
@@ -58,13 +58,13 @@
         <div class="right">
           <ul class="navbar-links">
               <li>
-                <a href="/" class="nav-link">Acasa</a>
+                <a href="/" class="nav-link">Hale Metalice</a>
               </li>
               <li>
                 <a href="/contact.html" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="/about.html" class="nav-link">Despre</a>
+                <a href="/about.html" class="nav-link">Acasa</a>
               </li>
               <li>
                 <a href="/gallery.html" class="nav-link">Galerie</a>
@@ -142,7 +142,7 @@
   <div class="main-wrapper wow fadeIn" data-wow-delay="0.3s">
     <div class="left">
       <div class="main-text">
-        <h2 class="main-subtitle">Cracteristici</h2>
+        <h2 class="main-subtitle">Caracteristici</h2>
         <h1 class="main-title">Teava Trasa</h1>
         <p class="main-description">Pentru ca <strong>nu este supusa sudurii</strong>, teava trasa are o sectiune transversala <strong>perfect rotunda</strong>.</p>
         <p class="main-description">Cel mai mare avantaj al tevilor din otel fara sudura este capacitatea lor crescuta de <strong>a rezista presiunii</strong>. Punctul cel mai slab intr-o teava de otel sudata il reprezinta punctul de sudura. Dar pentru ca o teava trasa nu a fost sudata, ea nu are aceast punct de sudura, fiind <strong>la fel de rezistenta pe intreaga circumferinta a conductei</strong>. </p>
