--- a/tuburi.html
+++ b/tuburi.html
@@ -65,13 +65,13 @@
         <div class="right">
           <ul class="navbar-links">
               <li>
-                <a href="/" class="nav-link">Acasa</a>
+                <a href="/" class="nav-link">Hale Metalice</a>
               </li>
               <li>
                 <a href="/contact.html" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="/about.html" class="nav-link">Despre</a>
+                <a href="/about.html" class="nav-link">Acasa</a>
               </li>
               <li>
                 <a href="/gallery.html" class="nav-link">Galerie</a>
