--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <img data-wow-delay="0.2s" class="wow fadeIn" src="assets/img/gallery/img16.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <figure class="gallery__figure">
-      <img data-wow-delay="0.3s" class="wow fadeIn" src="assets/img/gallery/img40.jpeg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
+      <img data-wow-delay="0.3s" class="wow fadeIn" src="assets/img/gallery/img40.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <figure class="gallery__figure">
       <img data-wow-delay="0.25s" class="wow fadeIn" src="assets/img/gallery/img23.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons."> 
