--- a/teava.html
+++ b/teava.html
@@ -96,7 +96,7 @@
     <div class="main-wrapper wow fadeIn" data-wow-delay="0.3s">
       <div class="left">
         <div class="main-text">
-          <h2 class="main-subtitle">Cracteristici</h2>
+          <h2 class="main-subtitle">Caracteristici</h2>
           <h1 class="main-title">Teava Sudata</h1>
           <p class="main-description">Tevi sudate elicoidal pentru <strong>magistrale de fluide energetice</strong> (apa, gaz, petrol):</p>
           <p class="main-description">diametru: Ф 273.10 – 1626 mm;</p>
@@ -160,11 +160,11 @@
         <p class="more-info-description">Teava din otel fara sudura poate fi, uneori, mai scumpa decat alte forme de teava din otel, dar este, de asemenea, <strong>mult mai fiabila</strong>. De obicei tevile cedeaza in punctul de sudura, dar pentru ca teava trasa nu are un astfel de punct, nu este supusa acestei defectiuni.</p>
         <p class="more-info-description">Aceste beneficii fac teava trasa <strong>materialul preferat</strong> intr-o gama larga de aplicatii, inclusiv constructia de <strong>nave, conducte, platforme petroliere, echipamente din domeniul petrolier, recipiente sub presiune, piese de masini si platforme marine</strong>. Totodata teava trasa este folosita si in domeniul constructiilor metalice ca element structural, acolo unde este nevoie de o rezistenta mecanica superioara. Un avantaj suplimentar al tevilor fara sudura este că ele functioneaza bine în <strong>conditii dure</strong>, ceea ce inseamna ca ele pot fi utilizate in medii <strong>foarte reci sau calde</strong>.</p>
         <p class="more-info-description">Avem si alte dimensiuni si grosimi la cererea dumneavoastra. Si la trasa si la sudata elicoidala. Avem pe stoc si teava recuperata. Pentru detalii va rugam sa ne contactati pe numerele de telefon din pagina de comanda.</p>
-        <p class="more-info-description"><strong>In plus, societatea naostra ofera transport gratuit.</strong></p>
+        <p class="more-info-description"><strong>In plus, societatea noastra ofera transport gratuit.</strong></p>
       </div>
     </div>
     <div class="dimensions wow fadeIn" data-wow-delay="0.45s">
-        <h1 class="main-title smaller">Dimensiuni disponibile (dimatreu x grosime)</h1>
+        <h1 class="main-title smaller">Dimensiuni disponibile (diametru x grosime)</h1>
         <div class="dimensions-wrapper">
           <div class="tags">
             <div class="tags-title">Dimensiuni Teava Trasa</div>
